--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,5 +20,7 @@
     <string name="hello_user">Hello %s</string>
     <string name="fullname_must_be_not_empty">Fullname must be not empty</string>
     <string name="password_is_not_match">Password is not match</string>
+    <string name="popular">Popular</string>
+    <string name="other_blogs">Other blogs</string>
     <!-- TODO: Remove or change this placeholder text -->
 </resources>
