feat(user): init user view and add sign out button for foo test

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,5 +31,6 @@
     <string name="travel">Travel</string>
     <string name="food">Food</string>
     <string name="education">Education</string>
+    <string name="sign_out">Sign out</string>
     <!-- TODO: Remove or change this placeholder text -->
 </resources>
