--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,5 +39,6 @@
     <string name="bookmark">Bookmark</string>
     <string name="user">User</string>
     <string name="password">Password</string>
+    <string name="search_results">Search results:</string>
     <!-- TODO: Remove or change this placeholder text -->
 </resources>
